--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas == 2.2.2
+pandas
 numpy == 1.26.4
 scikit-learn == 1.5.2
 streamlit == 1.24.1
-matplotlib == 3.8.0
+matplotlib
 seaborn == 0.13.2
 joblib == 1.3.2
 seaborn
