--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 pandas
-numpy == 1.26.4
-scikit-learn == 1.5.2
-streamlit
+numpy>=1.26.4
+scikit-learn==1.5.2
+streamlit>=1.40.0
 matplotlib
-seaborn == 0.13.2
-joblib == 1.3.2
-seaborn
-pillow>=10.0.0
+seaborn>=0.13.2
+joblib>=1.3.2
